# gold-factor-strategy

./: .gitignore  README.md  asym_mine.py  deep_mine.py  greedy_mine.py  index.html  ls_mine.py  mine_factors.py  ml_cv_mine.py  ml_mine.py  ml_oos_test.py  pyproject.toml  report.html  test_yf.py  ultra_mine.py
data/raw/: yahoo_panel.csv
docs/superpowers/plans/: 2026-06-03-gold-factor-strategy-implementation-plan.md
docs/superpowers/specs/: 2026-06-03-gold-factor-strategy-design.md
notebooks/: 01_factor_research.ipynb  02_strategy_backtest.ipynb
scripts/: search_comb.py  test_robustness.py  test_stooq.py
src/gold_strategy/: config.py  constants.py  generate_report.py  latest_signal.py  run_backtest.py  run_research.py
src/gold_strategy/backtest/: __init__.py  costs.py  engine.py  metrics.py  validation.py
src/gold_strategy/data/: __init__.py  fred_loader.py  local_loader.py  panel_builder.py  quality.py  yahoo_loader.py
src/gold_strategy/features/: __init__.py  macro.py  targets.py  technical.py  transforms.py
src/gold_strategy/reporting/: __init__.py  html_report.py  plots.py  signal_export.py
src/gold_strategy/research/: __init__.py  correlation.py  factor_selection.py  ic_analysis.py  quantile_analysis.py
src/gold_strategy/strategy/: __init__.py  rules.py  scoring.py  signal.py
tests/: test_backtest.py  test_features.py  test_metrics.py  test_signal.py
