[project]
name = "gold-strategy"
version = "0.1.0"
description = "GLD Gold ETF Factor timing strategy prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.30",
    "pandas-datareader>=0.10.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "scipy>=1.10.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
